1.4
	+ Added breadcrumbs to allowed applications in User Defined
 	  Permission Templates
1.3.15
	+ Bug fix: do not i18nify DefaultApplications table name
1.3.14
	+ Bug fix: set LDAP settings when saving changes
	+ Bug fix: add title and remove head title from inside tabs
	+ Bug fix: remove duplicated entries from vdomain select
1.3.13
	+ Set utf8 as the default system charset, fixes problem with euro character
	+ Removed extended backup as now it should be managed by ebox-ebackup
1.3.12
	+ Add page title
1.3.4
    + Added support for the following missing applications: groupdav, egw-pear, phpsysinfo, developer_tools, phpgwapi, syncml, tracker, notifications
1.1.30
    + Changed from eGroupware 1.4 to eGroupware 1.6
    + eGroupware backup is now integrated in eBox full backup
    + Added support for bookmarks eGroupware application
1.1
    + Bugfix: setting permissions template on a group casued an error
    + Bugfix: restart postgresql in a safer way during the enable process
0.12.101
    + Bugfix: do not remove objectClass fields when deleting a user or group
0.12.100
    + Initial release